--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
           go-version: '1.22'
       - name: Build binaries
         run: |
-          GOOS=linux GOARCH=amd64 go build -o jsonfilter-linux
-          GOOS=windows GOARCH=amd64 go build -o jsonfilter.exe
+          GOOS=linux GOARCH=amd64 go build -o terraform-ansible-inventory-linux
+          GOOS=windows GOARCH=amd64 go build -o terraform-ansible-inventory.exe
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
