--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
         with: { go-version: '1.22' }
       - name: Run unit tests
         run: go test -v ./...
+      - name: Build binary
+        run: go build -o terraform-ansible-inventory
       - name: Smoke test
         run: |
           echo 'Running smoke test...'
