--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Smoke test
         run: |
           echo 'Running smoke test...'
-          terraform-ansible-inventory -i smoketest.json -f ansible \
+          ./terraform-ansible-inventory -i smoketest.json -f ansible \
             | grep -q "test1 ansible_host=192.168.1.10"
