--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,9 @@ jobs:
       - name: Smoke test
         run: |
           echo 'Running smoke test...'
-          ./terraform-ansible-inventory -i smoketest.json -f ansible \
-            | grep -q "test1 ansible_host=192.168.1.10"
+          ./terraform-ansible-inventory -i smoketest.json -f yaml > out.yml
+          grep -q "test1" out.yml
+          ./terraform-ansible-inventory -i smoketest.json -f ini > out.ini
+          grep -q "ansible_host=192.168.1.10" out.ini
+          ./terraform-ansible-inventory -i smoketest.json -f json > out.json
+          grep -q '"test1"' out.json
