--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,9 @@
-name: Go Build and Release
+name: Release
 
 on:
   push:
     tags:
       - 'v*'
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
@@ -16,30 +14,31 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.24'
-      - name: Build
-        run: go build -v ./...
-      - name: Test
+      - name: Run unit tests
         run: go test -v ./...
-      - name: Smoke test
-        run: |
-          go build -o terraform-ansible-inventory
-          ./terraform-ansible-inventory -i smoketest.json -f yaml > /tmp/out.yml
-          grep -q test1 /tmp/out.yml
-
-  release:
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.24'
       - name: Build binaries
         run: |
           GOOS=linux GOARCH=amd64 go build -o terraform-ansible-inventory-linux
           GOOS=windows GOARCH=amd64 go build -o terraform-ansible-inventory.exe
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: binaries
+          path: |
+            terraform-ansible-inventory-linux
+            terraform-ansible-inventory.exe
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: binaries
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
