--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -24,7 +24,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ GITHUB_OUTPUT }}
+          username: hilkopterbob
           password: ${{ secrets.GHCR_TOEKN }}
       - name: Build and push image
         uses: docker/build-push-action@v5
@@ -34,5 +34,5 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: |
-            ghcr.io/${{ steps.repo.outputs.owner }}/terraform-ansible-inventory:${{ github.ref_name }}
-            ghcr.io/${{ steps.repo.outputs.owner }}/terraform-ansible-inventory:latest
+            ghcr.io/hilkopterbob/terraform-ansible-inventory:${{ github.ref_name }}
+            ghcr.io/hilkopterbob/terraform-ansible-inventory:latest
