--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           registry: ghcr.io
           username: HilkopterBob
-          password: ${{ secrets.GHCR_TOEKN }}
+          password: ${{ secrets.GITHUB_TOEKN }}
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
