--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,14 @@ jobs:
           grep -q "ansible_host=192.168.1.10" out.ini
           ./terraform-ansible-inventory -i smoketest.json -f json > out.json
           grep -q '"test1"' out.json
+      - name: Build Docker image
+        run: docker build -t tfi:test .
+      - name: Smoke test Docker image
+        run: |
+          echo 'Running Docker smoke test...'
+          docker run --rm -v $PWD:/data -w /data tfi:test -i smoketest.json -f yaml > out.yml
+          grep -q "test1" out.yml
+          docker run --rm -v $PWD:/data -w /data tfi:test -i smoketest.json -f ini > out.ini
+          grep -q "ansible_host=192.168.1.10" out.ini
+          docker run --rm -v $PWD:/data -w /data tfi:test -i smoketest.json -f json > out.json
+          grep -q '"test1"' out.json
